# prac_7sem

./: README.md
lecture-tasks/task6/: task1.cpp
task-1/: Addons.xcu  addon.cxx  Задание1_плагин_Writer.txt
task-1/AddonLO/: Makefile  addon.hxx
task-2/: CMakeCache.txt  CMakeLists.txt  cmake_install.cmake  csvfiles.cpp  main.cpp  mutation.cpp  mutation.h  simulated_annealing.h  sockets.cpp  sockets.h  solution.cpp  solution.h  temperature.cpp  temperature.h  tests.csv  Задание2_параллельный_ИО.txt
task-2/ParallelSA/: main.cpp  mutation.cpp  simulated_annealing.h  sockets.cpp  sockets.h  solution.cpp  solution.h  temperature.cpp  temperature.h  tests.csv
task-3/: CMakeLists.txt  factory.h  functions.h  main.cpp  roots.h
task-3/factory/: factory.h  functions.h  roots.h
task-4/: Задание4_ГА.txt
task-4/genalg/: CMakeLists.txt  field.h  genalgo.h  main.cpp  report.ipynb  test.sh
task-4/genalg/results/: series0.csv  series1.csv  series2.csv  series3.csv  series4.csv  series5.csv  series6.csv  series7.csv  series8.csv  series9.csv
task-4/genalg/results/series0/: series_0_run_0.txt  series_0_run_0_sol_after100.txt  series_0_run_1.txt  series_0_run_1_sol_after100.txt  series_0_run_2.txt  series_0_run_2_sol_after100.txt  series_0_run_3.txt  series_0_run_3_sol_after100.txt  series_0_run_4.txt  series_0_run_4_sol_after100.txt  series_0_run_5.txt  series_0_run_5_sol_after100.txt  series_0_run_6.txt  series_0_run_6_sol_after100.txt  series_0_run_7.txt  series_0_run_7_sol_after100.txt  series_0_run_8.txt  series_0_run_8_sol_after100.txt  series_0_run_9.txt  (+1 more)
(+180 files in other folders)
